Switch to Java 17 and update dependencies (#88)
* Start with 5.0-SNAPSHOT builds

* Fail fast in Travis

* Add PostgreSQL 15

* Compile and run tests in Java 17

* Get demo static analysis working

* Remove unused/broken profiles

* Enable Javadoc and remove Java 8 profile

* Upgrade to Vert.x 4.4.6

* Upgrade to Jetty 9.4.46

* Upgrade to Oracle 19.21 and remove old profiles

* Upgrade to Jetty 9.4.51, PostgreSQL 42.5.1, and system-rules 1.19

* Make Sonar happier

* Remove unused demo profile