@@ -5,7 +5,7 @@
   <groupId>com.github.susom</groupId>
   <artifactId>database</artifactId>
   <packaging>jar</packaging>
-  <version>4.1-SNAPSHOT</version>
+  <version>5.0-SNAPSHOT</version>
 
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Simplified API and compatibility layer for accessing JDBC data sources.</description>
@@ -35,10 +35,9 @@
   </scm>
 
   <properties>
-    <vertx.version>4.2.6</vertx.version>
+    <vertx.version>4.4.6</vertx.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <checker.dir>/Users/garricko/projects/checker-framework-1.8.6</checker.dir>
     <skipTests>false</skipTests>
     <skipITs>${skipTests}</skipITs>
     <skipUTs>${skipTests}</skipUTs>
@@ -76,12 +75,16 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.11.0</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.4</version>
+        <version>3.5.0</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -101,6 +104,14 @@
                   <shadedPattern>shaded.com.github.susom.database.shaded.com.zaxxer.hikari</shadedPattern>
                 </relocation>
               </relocations>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/MANIFEST.MF</exclude>
+                  </excludes>
+                </filter>
+              </filters>
             </configuration>
           </execution>
         </executions>
@@ -108,8 +119,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.20</version>
+        <version>3.1.2</version>
         <configuration>
+          <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
           <skipTests>${skipUTs}</skipTests>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <includes>
@@ -170,6 +182,23 @@
           <goals>deploy</goals>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.5.0</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <excludePackageNames>oracle.*</excludePackageNames>
+              <doclint>none</doclint>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
@@ -202,8 +231,8 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.10.19</version>
+      <artifactId>mockito-core</artifactId>
+      <version>5.7.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -263,158 +292,28 @@
     <dependency>
       <groupId>com.github.stefanbirkner</groupId>
       <artifactId>system-rules</artifactId>
-      <version>1.18.0</version>
+      <version>1.19.0</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit-dep</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
-      <version>9.4.41.v20210516</version>
+      <version>9.4.51.v20230217</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
 
   <profiles>
-    <profile>
-      <id>jdk8</id>
-      <activation>
-        <jdk>1.8</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <source>8</source>
-              <target>8</target>
-              <compilerId>javac-with-errorprone</compilerId>
-              <forceJavacCompilerUse>true</forceJavacCompilerUse>
-            </configuration>
-            <dependencies>
-              <dependency>
-                <groupId>org.codehaus.plexus</groupId>
-                <artifactId>plexus-compiler-javac-errorprone</artifactId>
-                <version>2.8.2</version>
-              </dependency>
-              <dependency>
-                <groupId>com.google.errorprone</groupId>
-                <artifactId>error_prone_core</artifactId>
-                <version>2.1.1</version>
-              </dependency>
-            </dependencies>
-          </plugin>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>findbugs-maven-plugin</artifactId>
-            <version>3.0.5</version>
-            <configuration>
-              <effort>Max</effort>
-              <threshold>High</threshold>
-              <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
-            </configuration>
-            <executions>
-              <execution>
-                <phase>compile</phase>
-                <goals>
-                  <goal>check</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.10.4</version>
-            <executions>
-              <execution>
-                <id>attach-javadocs</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-                <configuration>
-                  <excludePackageNames>oracle.*</excludePackageNames>
-                  <additionalparam>-Xdoclint:none</additionalparam>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <!-- TODO: Had to disable some plugins that didn't work with Java 11 -->
-      <id>jdk11</id>
-      <activation>
-        <jdk>11</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <source>11</source>
-              <target>11</target>
-<!--              <compilerId>javac-with-errorprone</compilerId>-->
-<!--              <forceJavacCompilerUse>true</forceJavacCompilerUse>-->
-            </configuration>
-<!--            <dependencies>-->
-<!--              <dependency>-->
-<!--                <groupId>org.codehaus.plexus</groupId>-->
-<!--                <artifactId>plexus-compiler-javac-errorprone</artifactId>-->
-<!--                <version>2.8.2</version>-->
-<!--              </dependency>-->
-<!--              <dependency>-->
-<!--                <groupId>com.google.errorprone</groupId>-->
-<!--                <artifactId>error_prone_core</artifactId>-->
-<!--                <version>2.1.1</version>-->
-<!--              </dependency>-->
-<!--            </dependencies>-->
-          </plugin>
-<!--          <plugin>-->
-<!--            <groupId>org.codehaus.mojo</groupId>-->
-<!--            <artifactId>findbugs-maven-plugin</artifactId>-->
-<!--            <version>3.0.5</version>-->
-<!--            <configuration>-->
-<!--              <effort>Max</effort>-->
-<!--              <threshold>High</threshold>-->
-<!--              <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>-->
-<!--            </configuration>-->
-<!--            <executions>-->
-<!--              <execution>-->
-<!--                <phase>compile</phase>-->
-<!--                <goals>-->
-<!--                  <goal>check</goal>-->
-<!--                </goals>-->
-<!--              </execution>-->
-<!--            </executions>-->
-<!--          </plugin>-->
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>oracle</id>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <includes combine.children="append">
-                <include>**/*Oracle*</include>
-              </includes>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-      <dependencies>
-        <dependency>
-          <groupId>com.oracle.ojdbc</groupId>
-          <artifactId>ojdbc6</artifactId>
-          <version>11.2.0.3</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
     <profile>
       <id>oracle12</id>
       <build>
@@ -462,29 +361,6 @@
     </profile>
 
     <profile>
-      <id>oracle18</id>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <includes combine.children="append">
-                <include>**/*Oracle*</include>
-              </includes>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-      <dependencies>
-        <dependency>
-          <groupId>com.oracle</groupId>
-          <artifactId>ojdbc8</artifactId>
-          <version>18.3</version>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
       <id>oracle19</id>
       <build>
         <plugins>
@@ -500,9 +376,9 @@
       </build>
       <dependencies>
         <dependency>
-          <groupId>com.oracle</groupId>
+          <groupId>com.oracle.database.jdbc</groupId>
           <artifactId>ojdbc8</artifactId>
-          <version>19.3</version>
+          <version>19.21.0.0</version>
         </dependency>
       </dependencies>
     </profile>
@@ -525,7 +401,7 @@
         <dependency>
           <groupId>com.oracle.database.jdbc</groupId>
           <artifactId>ojdbc8</artifactId>
-          <version>19.11.0.0</version>
+          <version>19.21.0.0</version>
         </dependency>
       </dependencies>
     </profile>
@@ -620,7 +496,7 @@
         <dependency>
           <groupId>org.postgresql</groupId>
           <artifactId>postgresql</artifactId>
-          <version>42.4.1</version>
+          <version>42.5.1</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -672,58 +548,6 @@
                 </goals>
               </execution>
             </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>checker</id>
-      <build>
-        <defaultGoal>generate-sources</defaultGoal>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>3.0.1</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>properties</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.6.0</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>exec</goal>
-                </goals>
-                <phase>generate-sources</phase>
-              </execution>
-            </executions>
-            <configuration>
-              <executable>${checker.dir}/checker/bin/javac</executable>
-              <classpathScope>test</classpathScope>
-              <arguments>
-                <argument>-processor</argument>
-                <argument>org.checkerframework.checker.tainting.TaintingChecker</argument>
-                <argument>-Astubs=src/main/resources</argument>
-                <argument>-AprintErrorStack</argument>
-                <argument>-Xmaxwarns</argument>
-                <argument>10000</argument>
-                <argument>-classpath</argument>
-                <classpath/>
-                <argument>-d</argument>
-                <argument>${project.build.directory}</argument>
-                <argument>${basedir}/src/main/java/com/github/susom/database/*.java</argument>
-                <argument>${basedir}/src/test/java/com/github/susom/database/test/*.java</argument>
-              </arguments>
-            </configuration>
           </plugin>
         </plugins>
       </build>
